fixed the overlap of buttons on small screens

--- a/components/Table/styles.module.scss
+++ b/components/Table/styles.module.scss
@@ -5,7 +5,7 @@
 
 .tableHead {
     position: relative;
-    width: 70px;
+    min-width: 70px;
 }
 
 .divider {
